--- a/src/main/webapp/pages/CompanyForms/CompanyForms.html
+++ b/src/main/webapp/pages/CompanyForms/CompanyForms.html
@@ -24,7 +24,34 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow3">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn4_1"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn4_1">
+                        <wm-panel iconclass="wi wi-book-open" autoclose="outsideClick" name="panelOpenForms" title="OpenForms" class="panel-primary">
+                            <wm-grid title="" dataset="bind:Variables.OpenCompanyFormsByVendorId.dataSet" navigation="Classic" name="gridOpenForms" filtermode="multicolumn" exportformat="EXCEL">
+                                <wm-grid-column binding="formTitle" caption="Form Title" type="string" readonly="true" show="true"></wm-grid-column>
+                                <wm-grid-column binding="municipalities.municipalityName" caption="Municipalities Municipality Name" type="string" readonly="true" show="true"></wm-grid-column>
+                                <wm-grid-column binding="formStatuses.status" caption="FormStatuses Status" type="string" readonly="true" show="true"></wm-grid-column>
+                                <wm-grid-column binding="balanceDue" caption="Balance Due" type="string" readonly="true" show="true"></wm-grid-column>
+                                <wm-grid-column binding="users.email" caption="Users Email" type="string" readonly="true" show="true"></wm-grid-column>
+                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Form" action="Variables.goToPage_Forms.invoke()" disabled="false"></wm-grid-row-action>
+                            </wm-grid>
+                        </wm-panel>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow5">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn6">
+                        <wm-panel iconclass="wi wi-book-open" autoclose="outsideClick" title="ClosedForms" class="panel-primary" name="panelClosedForms" margin="1em unset unset unset">
+                            <wm-grid title="" dataset="bind:Variables.ClosedCompanyFormsByVendorId.dataSet" navigation="Classic" filtermode="multicolumn" exportformat="EXCEL" name="gridClosedForms">
+                                <wm-grid-column binding="formTitle" caption="Form Title" type="string" readonly="true" show="true"></wm-grid-column>
+                                <wm-grid-column binding="municipalities.municipalityName" caption="Municipalities Municipality Name" type="string" readonly="true" show="true"></wm-grid-column>
+                                <wm-grid-column binding="formStatuses.status" caption="FormStatuses Status" type="string" readonly="true" show="true"></wm-grid-column>
+                                <wm-grid-column binding="balanceDue" caption="Balance Due" type="string" readonly="true" show="true"></wm-grid-column>
+                                <wm-grid-column binding="users.email" caption="Users Email" type="string" readonly="true" show="true"></wm-grid-column>
+                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Form" action="Variables.goToPage_FormsFormClosedCompanyForms.invoke()" disabled="false"></wm-grid-row-action>
+                            </wm-grid>
+                        </wm-panel>
+                    </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
