--- a/src/main/webapp/pages/ProcessForms/ProcessForms.html
+++ b/src/main/webapp/pages/ProcessForms/ProcessForms.html
@@ -30,7 +30,7 @@
                             <wm-grid-column binding="formStatuses.status" caption="Form Status" type="string" readonly="true" show="true"></wm-grid-column>
                             <wm-grid-column binding="formTypes.formType" caption="Form Design" type="string" readonly="true" show="true"></wm-grid-column>
                             <wm-grid-column binding="municipalityGroups.municipalities.municipalityName" caption="Municipality" type="string" readonly="true" show="true"></wm-grid-column>
-                            <wm-grid-column binding="vendor.companyName" caption="Company" type="string" readonly="true" show="true"></wm-grid-column>
+                            <wm-grid-column binding="vendor.companyName" caption="Primary Vendor" type="string" readonly="true" show="true"></wm-grid-column>
                             <wm-grid-column binding="balanceDue" caption="Balance Due" type="string" readonly="true" show="true"></wm-grid-column>
                             <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                             <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
