New Form Wizard New files added - [DocumentController.java,DocumentService.java,DocumentId.java,DocumentServiceImpl.java,Document.java,DocumentDao.java] Files modified - [Main.html,cx2_published_dataModel.json,VendorServiceImpl.java,QueryExecutionController.java,NewForm.html,Forms.html,Cx2QueryExecutorServiceImpl.java,FormTypesService.java,NewForm.variables.json,ManageForms.variables.json,GisrecordsServiceImpl.java,servicedef.xml,cx2_query.json,GisrecordsService.java,FormController.java,NewForm.js,cx2-queries.hbm.xml,FormTypesServiceImpl.java,Vendor.java,VendorService.java,States.java,NewForm.css,Forms.js,FormTypesController.java,Main.variables.json,FormTypes.java,VendorController.java,StatesServiceImpl.java,FormService.java,Forms.variables.json,StatesController.java,GisrecordsController.java,Cx2QueryExecutorService.java,StatesService.java,Gisrecords.java,db-connection-settings.json,pages-config.json]

--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -208,7 +208,7 @@
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions1">
-                <wm-button class="btn-primary" caption="Create" type="button" margin="unset 0.5em" name="buttonCreate" on-click="Variables.svCreateForm.invoke()" show="bind:Variables.GetFormTypesByCategoriesAndMunicipalities.dataSet.totalElements != 0" iconclass="wi wi-add"></wm-button>
+                <wm-button class="btn-primary" caption="Create" type="button" margin="unset 0.5em" name="buttonCreate" on-click="Variables.nacNewForm.invoke()" show="bind:Variables.GetFormTypesByCategoriesAndMunicipalities.dataSet.totalElements != 0" iconclass="wi wi-add"></wm-button>
                 <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button1" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
