Fixed the locations tab not showing Files modified - [Forms.variables.json,Forms.html,Forms.js]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -253,7 +253,7 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpaneLocation" title="LOCATION" show="bind:showMaps">
+                            <wm-tabpane name="tabpaneLocation" title="LOCATION" show="bind:Variables.lvFormType.dataSet.data[$i].gisrecord">
                                 <wm-layoutgrid name="layoutgrid17">
                                     <wm-gridrow name="gridrow60">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn125">
