updated a couple icons.. Files modified - [CXAdmin.html,ManageMunicipalities.html]

--- a/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
+++ b/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
@@ -12,7 +12,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow9">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn17">
-                        <wm-panel iconclass="wi wi-building" autoclose="outsideClick" name="panel1" title="All CX Municipalities" class="panel-primary">
+                        <wm-panel iconclass="wi wi-account-balance" autoclose="outsideClick" name="panel1" title="All CX Municipalities" class="panel-primary">
                             <wm-livegrid formlayout="dialog" name="livegrid1">
                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.Cx2MunicipalitiesData.dataSet" navigation="Classic" name="grid1" confirmdelete="Are you sure you want to delete this Municipality?" deletemessage="Municipality deleted successfully"
                                 nodatamessage="No Municipalities found." loadingdatamsg="Please Wait While Loading Municipalities..." exportformat="EXCEL" filtermode="multicolumn" showrecordcount="true">
