--- a/src/main/webapp/pages/CXAdmin/CXAdmin.html
+++ b/src/main/webapp/pages/CXAdmin/CXAdmin.html
@@ -58,7 +58,7 @@
                             <wm-layoutgrid height="100%" name="layoutgrid2">
                                 <wm-gridrow height="100%" name="gridrow5">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn11" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-building"></wm-icon>
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-account-balance"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn12" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="CX Municipalities" class="p" fontsize="1.4" fontunit="em"></wm-label>
